<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mohammed.guidofmaysan.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.mohammed.guidofmaysan.ui.AboutFragment"
        android:label="@string/menu_about_maysan"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_about_code"
        android:name="com.mohammed.guidofmaysan.ui.AboutCodeFragment"
        android:label="@string/menu_code_for_iraq"
        tools:layout="@layout/fragment_about_code" />

    <!--<fragment
        android:id="@+id/nav_setting"
        android:name="com.mohammed.guidofmaysan.ui.SettingsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_settings" />
        -->

    <fragment
        android:id="@+id/nav_send"
        android:name="com.mohammed.guidofmaysan.ui.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_about_designer"
        android:name="com.mohammed.guidofmaysan.ui.AboutDesignerFragment"
        android:label="@string/about_designer"
        tools:layout="@layout/fragment_about_designer" />
</navigation>