<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:textColor="?attr/myTextColorAttr"
                android:fontFamily="@font/cairo_regular"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textSize="16sp" />

            <FrameLayout
                android:background="@drawable/custom_edit1"
                android:layout_width="match_parent"
                android:layout_height="45dp">


            <TextView
                android:textColor="?attr/myTextColorAttr"
                android:paddingLeft="15dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:id="@+id/edit_text_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_header_subtitle"
                android:textSize="18sp" />
            </FrameLayout>
            <TextView
                android:textColor="?attr/myTextColorAttr"
                android:fontFamily="@font/cairo_regular"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subject"
                android:textSize="16sp" />

            <EditText
                android:textColor="?attr/myTextColorAttr"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edit1"
                android:id="@+id/edit_text_subject"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/subjecte"
                android:inputType="textEmailSubject"
               />

            <TextView
                android:textColor="?attr/myTextColorAttr"
                android:fontFamily="@font/cairo_regular"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:textSize="16sp" />

            <EditText
                android:textColor="?attr/myTextColorAttr"
                android:padding="12dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edit1"
                android:id="@+id/edit_text_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:lines="10"
               />

            <Button
                android:fontFamily="@font/cairo_regular"
                android:layout_marginBottom="10dp"
                android:id="@+id/button_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/color_button"
                android:text="@string/send"
                 />

            <TextView
                android:textColor="?attr/myTextColorAttr"
                android:fontFamily="@font/cairo_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/gmail_message"
                />
        </LinearLayout>

</ScrollView>