<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
      >
    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layoutDirection="ltr">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                app:cardBackgroundColor="?attr/cardbackground"
                android:id="@+id/first"
                app:cardElevation="5dp"
                app:cardCornerRadius="10dp"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/ic_mosque" />
                    <TextView
                        android:textSize="18sp"
                        android:textColor="?attr/myTextColorAttr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/mosque"

                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                app:cardBackgroundColor="?attr/cardbackground"
                android:id="@+id/first1"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardElevation="5dp"
                app:cardCornerRadius="10dp"
              >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView

                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/ic_hotel" />



                    <TextView
                        android:textSize="18sp"
                        android:textColor="?attr/myTextColorAttr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/hotel"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                app:cardBackgroundColor="?attr/cardbackground"
                android:id="@+id/first2"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/ic_burger"
                        android:padding="5dp"/>
                    <TextView
                        android:textColor="?attr/myTextColorAttr"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/resturant"

                        />




                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                app:cardBackgroundColor="?attr/cardbackground"
                android:id="@+id/first3"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/ic_hospital" />


                    <TextView
                        android:textSize="18sp"
                        android:textColor="?attr/myTextColorAttr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/hospital"

                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal">



            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                app:cardBackgroundColor="?attr/cardbackground"
                android:id="@+id/first5"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardElevation="5dp"
                app:cardCornerRadius="10dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView

                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/ic_rickshaw" />


                    <TextView
                        android:textColor="?attr/myTextColorAttr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="18sp"
                        android:text="@string/marshes"

                        />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </LinearLayout>

</ScrollView>